# ISRO_BAH_26_lunar_ice

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: README.md
data/processed/: candidates.csv  candidates_router.csv  depot.csv
docs/: figures.md  interface.md  report.md
outputs/: landing_candidates.geojson  landing_site_polygon.geojson  manifest.json  target_crater.geojson
outputs/dfsar/: stats.json  volume.csv
outputs/fp_f2/: stats.json  volume.csv
scripts/: 00_prepare.py  01_terrain.py  02_illumination.py  03_suitability.py  04_candidates.py  05_figures.py  06_dfsar_detect.py  07_export_candidates.py  08_fp_detect.py  09_pipeline_figure.py
src/lunar_ice/: __init__.py  candidates.py  dfsar.py  illumination.py  io_utils.py  suitability.py  terrain.py  viz.py
