[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar_ice"
version = "0.1.0"
description = "Lunar subsurface-ice detection (Chandrayaan-2 DFSAR) + landing-site selection (LOLA) — ISRO BAH PS-8"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
